--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,27 +7,25 @@ trigger:
 - main
 
 pool:
-  vmImage: 'windows-updated'
-
+  vmImage: 'windows-latest'
 strategy:
   matrix:
     Python37:
       python.version: '3.7'
-  maxParallel: 1
 
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
 
 steps:
-
 - task: UsePythonVersion@0
   inputs: 
     versionSpec: '$(python.version)'
-    architecture: 'x64'
+  displayName: 'Use Python $(python.version)'
 
-- script: pip install robotframework robotframework-pabot robotframework-seleniumlibrary webdrivermanager
+- script:
+    python -m pip install --upgrade pip
+  displayName: 'Install dependencies'
+
+- script:
+    pip install robotframework robotframework-pabot robotframework-seleniumlibrary webdrivermanager
   displayName: 'Install dependencies'
 
 - powershell:
