Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
   displayName: 'Install dependencies'
 
 - powershell:
-    robot --pythonpath . -x outputxunit.xml ProjectbaseforAzure/Tests
+    robot --pythonpath . -x outputxunit.xml Tests
   displayName: 'Run robot tests'
 
 - task: PublishTestResults@2
